@@ -21,6 +21,7 @@
 	* dmoreg.h: Fix the DMOGetName() prototype (wine git: 
 	  d223716b7bcde8839c741d83865b95c990a8abcc).
 	* dpaddr.h: Fix some typos (wine 9f3c91e41f82ba302afad386aa1be58d6dec2b23).
+	* dplay.h: Add missing defs (4ab75e121426d8840b6bfb196cef45506091fd25.)
 
 2009-04-04  Ozkan Sezer <sezeroz@gmail.com>
 
